Fixed argument passing to unix runtime.